# EMcNeil_Demo_Material

./: README.md  README_EMcNeil_Demo_Material.md.txt
Apollo_11_Final_Approach_EKF_UKF_ParticleFilter_TradeStudy/Apollo_SIM_with_Filters/: EKF_Simulation_Run_Plots_EEM.m  Particle_Simulation_Run_Plots_EEM.m  UKF_Simulation_Run_Plots_EEM.m  aero_libdap.slx  aerolibgravity2.slx  shared6dofsys.slx
Apollo_11_Final_Approach_EKF_UKF_ParticleFilter_TradeStudy/Digitized_Apollo11_Data/: AltAccel_trunc.mat  AltRate_trunc.mat  Final_Project_Digitized_Data_Truncation.m  Final_Project_EKF_EEM.m  Final_Project_Particle_Filter_EEM.m  Final_Project_UKF_EEM.m  Pitch_trunc.mat  Pitch_vs_Time.mat  Thrust_trunc.mat  Thrust_vs_TimefromIgnition.mat  Time_AA_trunc.mat  Time_AR_trunc.mat  Time_R_trunc.mat
Apollo_11_Proximity_Sensor_Kalman_Filter/Apollo_SIM_with_Filters/: EKF_Simulation_Run_Plots_EEM.m  Final_Project_EEM_EKF_SIM.slx  Final_Project_EEM_Particle_SIM.slx  Final_Project_EEM_SIM_init_params.m  Final_Project_EEM_UKF_SIM.slx  Particle_Simulation_Run_Plots_EEM.m
Apollo_11_Proximity_Sensor_Kalman_Filter/Digitized_Apollo11_Data/: AltAccel_vs_Time.mat  AltRate_vs_Time.mat  Alt_trunc.mat  Altitude_vs_AltitudeRate.mat  Altitude_vs_Time.mat  Final_Project_EKF_EEM.m  Final_Project_UKF_EEM.m  RangeAccel_trunc.mat  RangeAccel_vs_Time.mat  Range_trunc.mat  Range_vs_Time.mat  Time_A_trunc.mat  Time_P_trunc.mat  Time_RA_trunc.mat  Time_T_trunc.mat
Golfball_State_Estimation_KF_EKF_UKF_Particle/: Golf_Ball_Demo_KF_EKF_UKF_Particle.m  golfball_flight_data.xlsx  odefcn_golfball_dynamics.m
SatelliteSim/: CMakeLists.txt
SatelliteSim/Test_Setup/cpp/: sim_results.csv  sim_results1.csv  sim_results10.csv  sim_results11.csv  sim_results2.csv  sim_results3.csv  sim_results4.csv  sim_results5.csv  sim_results6.csv  sim_results9.csv
SatelliteSim/Test_Setup/python/: conftest.py  plot_sim_results.py  plot_sim_results_b.py  test_sim_results.py
SatelliteSim/data/: gh.csv  igrfcoefs.mat  mod_data_from_mat.m  mod_data_from_mat2.m  years.csv
SatelliteSim/firmware/: CMakeLists.txt  control_algorithm.cpp  control_algorithm.h
SatelliteSim/include/: Vec3.h  Vec4.h  Vec7.h  adcs_hal.h  eulerseqns2.h  igrf.h  igrf_loader.h  iss_orbit.h  magnetic_field.h  ned2eci.h  ode4.h  vendor_timer.h
SatelliteSim/src/: CMakeLists.txt  adcs_hal_sim.cpp  eulerseqns2.cpp  igrf.cpp  igrf_loader.cpp  iss_orbit.cpp  magnetic_field.cpp  main.cpp  ned2eci.cpp  ode4.cpp  quick_test.cpp  test_bfield.cpp  vendor_timer_stub.cpp
Satellite_Architecture/Satellite_Control_Simulation/cpp/: CMakeLists.txt
Satellite_Architecture/Satellite_Control_Simulation/cpp/datfiles/: igrf_all_epochs.json
Satellite_Architecture/Satellite_Control_Simulation/cpp/include/: IGRFLoader.h  control_sim.hpp  euler_dynamics.hpp  eulerseqns2.h  igrf.h  igrf_coeffs.h  igrf_loader.h  iss_orbit.h  legendre.h  magnetic_field.hpp  ned2eci.h  ode4m.h
Satellite_Architecture/Satellite_Control_Simulation/cpp/src/: IGRFLoader.cpp  bindings.cpp  control_sim.cpp  euler_dynamics.cpp  eulerseqns2.cpp  igrf.cpp  iss_orbit.cpp  legendre.cpp  magnetic_field.cpp  main.cpp  ned2eci.cpp  ode4m.cpp
Satellite_Architecture/Test_Setup/python/: test_kernels.py
Satellite_Attitude_Optimal_Estimation_MEKFilter__3-axis_Gyroscopes/: A5P7.mat  MEKF_Satellite_Attitude_Estimation.m
Satellite_Attitude_PD_Controller__with_Reaction_Wheels/: eulerseqns.m  issorb_finalproj.m  lunar_relay_satellite_attitude_control.m  ode4fp.m
Satellite_Attitude_SlidingMode_Controller/: EarthPointingAttitudeSimulation.m  EarthPointingData.mat  SlidingModeControlAnalysis.m  SlidingModeErrors.mat  eulerseqns.m  ode4n.m  sat.m
Satellite_LEO_Magnetorquer_Despin_Controller/: HW3_P3.m  Satellite_LEO_Magnetorquer_Despin_Controller.m  eulerseqns2.m  issorb.m  loadigrfcoefs.m  ned2eci.m  ode4m.m
Supersonic_Aircraft_Trajectory_Optimization/: EMcNeil_Final_Project_full-space_4-26-25.py  EMcNeil_Final_Project_reduced_space_4-26-25.py
Supersonic_Fixed-wing_Aircraft_Trajectory_Optimization/: EMcNeil_Final_Project_full-space_4-26-25.py  EMcNeil_Final_Project_reduced_space_4-26-25.py
optimization_analysis_tools/: grad_cs_comparison.py  kkt_visualization.py  log_barrier_demo.py  parametric_kkt.py  penalty_convergence.py  projectile_optimization.py  solver_comparison.py  symbolic_diff_demo.py  trust_region_paths.py  warm_start_strategies.py
orbital_mechanics_simulations_and_analysis_tools/Atmospheric_Drag_Pass_Mars/: AerobrakingMROAnalysis.m  AerobrakingMROAnalysis_with_Animation.m  MRO_AerobrakingResults.mat
orbital_mechanics_simulations_and_analysis_tools/Earth-Moon_Lagrange_Points_DeltaV_Jacobi/: LagrangePointsDeltaV_Jacobi.m
orbital_mechanics_simulations_and_analysis_tools/Earth-to-Mars_Interplanetary_Transfer/: EarthMarsTransferAnalysis.m  Earth_to_Mars_Interplanetary_Transfer.m  Mars_Stay_Time_Human_Mars_Mission.m
orbital_mechanics_simulations_and_analysis_tools/Gauss_Problem_via_Universal_Variables/: GaussSolver.m
orbital_mechanics_simulations_and_analysis_tools/Lunar_Capture_and_Circularization_Maneuver/: LunarCaptureandCircularization.m
orbital_mechanics_simulations_and_analysis_tools/Two-Body_ODE_Integrator_3D_Orbit_Propagation/: TwoBodyPropagationAnalysis.m  TwoBodyPropagationData.mat  two_body_eom.m
orbital_mechanics_simulations_and_analysis_tools/Venus_Fly-by_Mission_Design/: VenusFlybyMissionDesign.m
star_tracker/data/: star_image.mat
star_tracker/output/: line_of_sight_vectors.mat  star_centroids.csv  star_match_results.csv
star_tracker/scripts/: detected_centroids.mat  star_catalog_matching.m  star_image_processing.m
